--- a/css/contact.css
+++ b/css/contact.css
@@ -157,7 +157,11 @@ body.dark {
 /* Nội dung cửa sổ chính */
 .modal-content {
   background-color: white;
-  margin: 50% auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   padding: 30px;
   border-radius: 8px;
   width: 90%;
